added styling to footer

--- a/client/src/components/common/common.css
+++ b/client/src/components/common/common.css
@@ -2,3 +2,28 @@
     max-width: 100%;
     height: auto;
 }
+
+.ui.link.list .item,
+.ui.link.list .item a:not(.ui),
+.ui.link.list a.item,
+h4.ui.header {
+  color: #fff !important;
+}
+
+.ui.link.list .item a:not(.ui):hover,
+.ui.link.list a.item:hover {
+  color: #3ebcb2 !important;
+}
+
+.ui.link.list {
+  font-size: 12px;
+  line-height: 1.8;
+}
+
+a.email {
+  color: #fff;
+}
+
+a.email:hover {
+  color: #3ebcb2;
+}
