--- a/static_pages/css/css.css
+++ b/static_pages/css/css.css
@@ -21,6 +21,7 @@
 .price {
   background-color: grey;
   text-align: center;
+    padding:  20px;
   color: white;
 }
 
@@ -33,6 +34,10 @@
 
 .card-content {
   text-align: center;
+    height: 60px;
+/*    padding: 24px;*/
+    margin: 10px;
+    
 }
 
 .fee-title {
@@ -55,4 +60,9 @@
 
 .money-icon i {
   float: right;
+}
+
+#goog_map {
+  width: 300px;
+  height: 300px;
 }
